# bmssp-benchmark-game

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GIGAPLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  make_report.sh  run_fast.sh
.github/workflows/: bench.yml  pages.yml
bench/: make_report.py  params.yaml  params_1000x.yaml  plots.py  requirements.txt  runner.py  schema.json  smoke_matrix.yaml
bmssp/: Cargo.toml
bmssp/benches/: bench.rs
bmssp/src/: lib.rs
docs/: Gemfile  README.md  _config.yml  algorithm.md  benchmarking.md  getting-started.md  implementations.md  index.md
docs/_includes/: navigation.html
docs/_layouts/: default.html
impls/c/: Makefile
impls/c/src/: main.c
impls/cpp/: Makefile
impls/cpp/src/: main.cpp
impls/crystal/: shard.yml
impls/crystal/src/: main.cr
impls/elixir/: README.md  bmssp.exs
impls/erlang/: README.md  bmssp.erl
impls/kotlin/: README.md
impls/kotlin/src/main/kotlin/: Main.kt
impls/nim/: nimble.json
impls/nim/src/: main  main.nim
impls/zig/: README.removed  build.zig  zig.json
impls/zig/src/: main.zig
scripts/: Install-Dependencies.ps1  install_deps.sh
