[package]
name = "bmssp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bounded multi-source shortest path (BMSSP)-style Dijkstra implementation with tests and benchmarks."

[lib]
name = "bmssp"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
